[package]
name = "rsbotters"
version = "0.0.1"
description = "Cryptocurrency exchange API client for traders, known as \"botters\" in Rust"
authors = ["nukopy <nukopy@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/nukopy/rsbotters"
repository = "https://github.com/nukopy/rsbotters.git"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
